Fixes the grid displaying the row childs by wrapping the content

--- a/scss/furatto/_base.scss
+++ b/scss/furatto/_base.scss
@@ -39,6 +39,9 @@ body {
   line-height: $base-line-height;
 }
 
+div, p {
+  width: 100%;
+}
 
 img,
 embed,
